src/pages/bp-profile/bp-profile.scss
bp-profile {
	.user-name {
		font-weight: 500;
		margin-right:8px;
		margin-bottom: 10px;
		font-size: 1.6rem;
	}

	.mention-name {
		margin-bottom: 10px;
	}

	.item ion-avatar img {
		width: 100px;
		height: 100px;
	}

	.button .badge {
		margin-left: 5px;
		font-size: 1rem;
		padding: 2px 6px;
	}

	.col {
		min-width: 90px;
	}

	.card {
		box-shadow: none;
		border: none;
	}

	.last-activity img {
		display: block;
		height: auto;
		width: 100%;
		margin: 10px 0;
	}

	.last-update-header {
		padding: 15px;
		color: #999;
		font-size: 12px;
		text-transform: uppercase;
	}

	.cover-image {
		width: 100%;
	}
}

